PMIdentity/deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
    name: pm-service-identity
spec:
    selector:
        matchLabels:
            app: pm-service-identity
    replicas: 1
    template: # template for the pods
        metadata:
            labels:
                app: pm-service-identity
        spec:
            containers:
                - name: pm-service-identity
                  image: ${REPOSITORY_TAG}
                  imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
    name: pm-service-identity

spec:
    # This defines which pods are going to be represented by this Service
    # The service becomes a network endpoint for either other services
    # or maybe external users to connect to (eg browser)
    selector:
        app: pm-service-identity

    ports:
        - name: http
          port: 80
          nodePort: 30082

    type: NodePort
---

apiVersion: v1
kind: Pod
metadata:
    name: busybox
    namespace: default
spec:
    containers:
        - name: busybox
          image: busybox:1.28
          command:
              - sleep
              - "3600"
          imagePullPolicy: IfNotPresent
    restartPolicy: Always
