PMIdentity/pc-ingress-routing.yaml
# from v1.14 of k8s
# apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
spec:
  rules:
    - host: drk-devops3
      http:
        paths:
          - path: /jenkins
            backend:
              serviceName: jenkins
              servicePort: 8080
          - path: /identity
            backend:
              serviceName: pm-identity-service
              servicePort: 30082
